--- a/rbs_collection.yaml
+++ b/rbs_collection.yaml
@@ -11,7 +11,9 @@ path: .gem_rbs_collection
 gems:
   # Skip loading rbs gem's RBS.
   # It's unnecessary if you don't use rbs as a library.
-  - name: concurrent-ruby
+#  - name: concurrent-ruby
+#    ignore: true
+  - name: ffi
     ignore: true
   - name: lt-lcms
     ignore: true
