Add Webhook feature and api to get resources Implemented: - WebhookConfiguration and WebhookCallJob - Api::BaseController with HMAC authentication (using SHA256). - api/resources
Additionally:
Updated gem version
Specified foundation-rails version to avoid issues with scss
rbs_rails added to help with rbs definitions; rbs definitions for new files added

--- a/rbs_collection.yaml
+++ b/rbs_collection.yaml
@@ -23,3 +23,11 @@ gems:
     ignore: true
   - name: steep
     ignore: true
+  - name: parser
+    ignore: true
+  - name: ast
+    ignore: true
+  - name: rubocop
+    ignore: true
+  - name: httparty
+    ignore: true
