--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -25,6 +25,14 @@ gems:
     revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: actiontext
+  version: '7.2'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 6cbb0d2b0240b4989e1ade8f878805c927df59e5
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: actionview
   version: '6.0'
   source:
@@ -403,6 +411,14 @@ gems:
     type: git
     name: ruby/gem_rbs_collection
     revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: rails-html-sanitizer
+  version: '1.6'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 6cbb0d2b0240b4989e1ade8f878805c927df59e5
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: railties
